MD-2009-01-28-0: CVS:         Created V61u6_TAG.
------------------------------------------------

AP-2009-01-26-0: Bugfix:      File permissions must be set by admin user
                 Bugfix:      Existing model 'Object' is not assignable from type
                              [com.sun.grid.arco.sql.SQLQueryResult] exception
                 Bugster:     6797583
                 Issue:       2889
                 Review:      JO

AP-2008-10-30-0: Bugfix:      Updating Changelog entry
                 Belongs to:  AP-2008-10-20-0

AP-2008-10-20-0: Bugfix:      adding the missing file BigDecimalField.java
                 Belongs to:  AP-2008-10-17-0
                 Review:      JO

AP-2008-10-17-0: Bugfix:      All foreign and primary keys in db_definition.xml
                              should be defined as bigint
                 Bugster:     6717825
                 Issue:       2626
                 Review:      JO

JO-2008-09-25-0: Enhancem.:   Fixed Cangelog entry

JO-2008-09-10-0: Bugfix:      dbwriter keeps crashing due to inability to close the open cursors   
                 Bugster:     6745913
                 Issue:       2722
                 Review:      LP

JO-2008-09-03-0: Bugfix:      dbwriter installation fails if admin_user in bootstrap file is 'none'    
                 Bugster:     6743431
                 Issue:       2712
                 Review:      LP

JO-2008-09-02-0: Bugfix:      error() appears after 'Dbwriter configuration file' section in installation
                 Bugster:     6743621
                 Issue:       2713
                 Review:      AP

JO-2008-08-29-0: Bugfix:      parameters are not replaced during database connection test
                 Bugster:     6742976
                 Issue:       2708
                 Bugfix:      Correction of commit: AP-2008-08-14-0
                 Review:      AP
