@@ -30,7 +30,7 @@
 ##########################################################################
 #___INFO__MARK_END__
 
-product.version=6.1u5
+product.version=6.1u7
 product.name=GE
 product.longname=Sun Grid Engine
 product.windowtitle=SGE ARCo Common API
@@ -58,7 +58,7 @@ swc3.0.webcommon.jar=/vol2/tools/SW/java/swc-3.0/SMIWebCommon.jar
 swc3.0.consoleutil.jar=/vol2/tools/SW/java/swc-3.0/consoleutil.jar
 swc3.0.servlet.jar=/vol2/tools/SW/java/swc-3.0/servlet.jar
 oracle.jdbcdriver=/vol2/tools/SW/oracle/9.0.1/solaris64/OraHome1/jdbc/lib/classes12.jar
-postgres.jdbcdriver=/vol2/tools/SW/java/arco_3rdparty/postgresql-7.4.2.jar
+postgres.jdbcdriver=/vol2/tools/SW/java/postgres_jdbc/postgresql-8.0-318.jdbc3.jar
 mysql.jdbcdriver=/vol2/tools/SW/java/mysql-connector-java-5.0.4/mysql-connector-java-5.0.4-bin.jar
 webapps.home=/var/opt/webconsole/webapps
 jfreechart.jar=/vol2/tools/SW/java/jfreechart-0.9.21/jfreechart-0.9.21.jar
