@@ -98,7 +98,13 @@ public class ResultConverter {
       reg( new DateConverter( Date.class, "date", "yyyy-MM-dd HH:mm:ss") );
       reg( new DateConverter( java.sql.Timestamp.class, "timestamp", "yyyy-MM-dd HH:mm:ss") );
       reg( new DateConverter( java.sql.Time.class, "time", "HH:mm:ss") );
-      reg( new DateConverter( java.sql.Date.class, "sqlDate", "yyyy-MM-dd HH:mm:ss" ) );      
+      reg( new DateConverter( java.sql.Date.class, "sqlDate", "yyyy-MM-dd HH:mm:ss" ) );
+      reg( new ObjectConverter () );
+      try {
+         reg( new IntervalConverter () );
+      } catch (NoClassDefFoundError err) {
+        // the class doesn't exist for all types of databases
+      }
    }
    
    static abstract class AbstractConverter {
@@ -269,5 +275,53 @@ public class ResultConverter {
       }
       
    }
-   
+
+   static class ObjectConverter extends AbstractConverter {
+
+      public ObjectConverter( ) {
+         super(java.lang.Object.class, "object");
+      }
+
+      public String toStr(Object obj) {
+         if(obj == null) {
+            return null;
+         } else {
+            return obj.toString();
+         }
+      }
+
+      public Object toObj(String str) {
+         return str;
+      }
+
+   }
+
+   /*
+    * CR 6792542 - In ARCo views the interval type is used for PostgreSQL database
+    * (see view_job_times for an example)
+    * It's  represented by org.postgresql.util.PGInterval.class, the class from
+    * the PostgreSQL (version 8.0 and higher) jdbc driver jar.
+    * No appropriate java class is mapped to this class, so the converter of this
+    * class must be registered.
+    * For Oracle and Mysql databases the jar file is not available, so the
+    * exception NoClassDefFoundError is thrown by constructor.
+    */
+   static class IntervalConverter extends AbstractConverter {
+
+      public IntervalConverter( ) throws NoClassDefFoundError {
+         super(org.postgresql.util.PGInterval.class, "interval");
+      }
+
+      public String toStr(Object obj) {
+         if(obj == null) {
+            return null;
+         } else {
+            return obj.toString();
+         }
+      }
+
+      public Object toObj(String str) {
+         return str;
+      }
+   }
 }
